add action section inside main

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 .inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
 }
 /* button style */
@@ -67,4 +66,28 @@ nav{
 .nav-logo{
     font-size: 34px;
     font-weight: 900;
+}
+/* action section */
+.action{
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    padding: 120px 170px;
+}
+.action-title{
+    font-size: 42px;
+        
+}
+.action-titlebar{
+    gap: 23px;
+    /* padding: 63px 220px 63px 0px; */
+    margin-right: 550px;
+}
+.action-disc{
+    color: rgba(37, 36, 50, 0.5);
+    font-size: 24px;
+    line-height: 30px;  
+}
+.action-img{
+    border-radius: 48px;
 }
