--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ nav{
 }
 .action-titlebar{
     gap: 23px;
-    /* padding: 63px 220px 63px 0px; */
     margin-right: 550px;
 }
 .action-disc{
@@ -90,4 +89,32 @@ nav{
 }
 .action-img{
     border-radius: 48px;
+}
+/* Users Section */
+.user{
+    background-color: rgba(78, 71, 255, 0.1);
+    margin: 0px 165px 116px;
+    padding: 50px 142px;
+    border-radius: 24px;
+    border: none;
+    gap: 10px;
+}
+.user-title{
+    font-size: 38px;
+    text-align: center;   
+}
+.users-section{
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 40px;
+}
+.user-num{
+    color: rgba(78, 71, 255, 1);
+    font-size: 80px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.user-name{
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.5);
 }
