Fix: placed footer content inside proper <main> tag

--- a/style.css
+++ b/style.css
@@ -118,11 +118,7 @@ nav{
     font-size: 20px;
     color: rgba(0, 0, 0, 0.5);
 }
-/* footer Section */
-footer{
-    margin: 0;
-}
-/* contact */
+/* Contact Section */
 .contact-section{
     display: flex;
     justify-content: center;
@@ -170,6 +166,9 @@ footer{
   color: rgba(0, 0, 0, 0.5);
 }
 /* Footer Section */
+footer{
+    margin: 0;
+}
 .footer-section{
     background-color: #fff8f8;
     max-width: 1440px;
